added validator to add item and edit item to check for a length of at least 1

--- a/views/todos.mustache
+++ b/views/todos.mustache
@@ -15,6 +15,11 @@
             <button type="submit">Add Todo</button>
         </form>
         <ul class="todo-list">
+            <div>
+            {{#errors}}
+            <p>{{msg}}</p>
+            {{/errors}}
+            </div>
 
             {{#notCompleted}}
             <div class='wrapper'>
