--- a/views/edit.mustache
+++ b/views/edit.mustache
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="utf-8">
-      <title>Edit Item</title>
-      <link rel="stylesheet" href="../public/styles.css">
-   </head>
-   <body>
-      <div class="container">
-        <h1>Edit Item</h1>
-        {{#todoList}}
-        
-        <form id="listItem" method="POST" action="/edit/{{id}}">
-        <input type="text" name="editItem" placeholder="Update Task..." autofocus/>
-        <button type="submit">Update</button>
-         </form>
-        {{/todoList}}
 
-            
-       
-      </div>
-   </body>
+<head>
+  <meta charset="utf-8">
+  <title>Edit Item</title>
+  <link rel="stylesheet" href="../public/styles.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1>Edit Item</h1>
+    <div>
+      {{#errors}}
+      <p>{{msg}}</p>
+      {{/errors}}
+    </div>
+    
+    {{#todoList}}
+
+    <form id="listItem" method="POST" action="/edit/{{id}}">
+      <input type="text" name="editItem" placeholder="Update Task..." autofocus/>
+      <button type="submit">Update</button>
+    </form>
+    {{/todoList}}
+
+
+
+  </div>
+</body>
+
 </html>
